# mnumonic

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
words/: en.txt
