[package]
name = "mnumonic"
version = "0.2.0"
authors = ["Kartikaya Gupta"]
edition = "2018"
license = "0BSD"

description = "A tiny library to convert opaque binary data to and from a human-memorable phrase"
homepage = "https://github.com/staktrace/mnumonic/blob/master/README.md"
repository = "https://github.com/staktrace/mnumonic"
readme = "README.md"
keywords = ["human", "readable", "words", "encode", "convert"]
categories = ["encoding", "text-processing", "value-formatting", "parsing", "gui"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["en"]
en = []

[dependencies]
